2020-January-18 Struan Robertson

		* Marquardt.cpp, FittingUtils.h/.cpp: Altered to give better control over Marquardt 
		lambda parameter.

		* Schemas .xsd: Updated to with new elements and attributes. 

		* Reaction.h: Linux warning changes.

		* Documentation update.

		* VC15 Mesmer.vcxproj: Updated VC15 project.

2019-November-29 Struan Robertson

		* ExchangeReaction.h/.cpp: Added bimolecular rate coefficient calculator.

		* VC15 Mesmer.vcxproj: Updated VC15 project.

2019-November-23 Struan Robertson

		* Fragmentation.h, PriorDistFragmentation.cpp, ExchangeReaction.cpp, Defaults.xml 
		PseudoIsomerizationReaction.cpp: Introduction of fragmentation plugin class.

		* IsomerizationReaction.cpp: Added check for the error that react and product are 
		the same.

		* MesmerFlag.cpp: Set default for useTheSameCellNumber flag to true.

		* EthyleneAbstraction.xml: Updated with correct rate data.

2019-October-30 Struan Robertson

		* CollisionOperator.cpp: Changes related to the Exchange reaction method.

		* ExchangeReaction.cpp/.h, Fragmentation.h: Further updates to implementation of the 
		micro-rate method.

		* Marquardt.cpp, HinderedRotorUtilis.cpp: Corrected warning output channel.

2019-October-27 Struan Robertson

		* PseudoIsomerizationReaction.cpp, PriorDistFragmentation.cpp/.h: Updated following 
		interface change.

		* ExchangeReaction.cpp/.h, Fragmentation.h: Updated implementation of the micro-rate 
		method.

		* MesmerMath.h: Added normalization method.

		* MesmerMath.h, MesmerTools.cpp, ParseForPlugin.cpp, SensitivityAnalysis.cpp, qd_test.h: 
		Header file rationalization. 

		* Marquardt.cpp: Fix for Linux64 build break.

2019-October-22 Struan Robertson

		* PseudoIsomerizationReaction.h/.cpp: Header file re-arrangement.

		* ClassicalCoupledRotors.cpp, HinderedRotorQM1D.cpp, HinderedRotorCM1D.cpp, 
		HinderedRotorUtils.cpp: Improved reporting.

		* ExchangeReaction.cpp/.h, Reaction.h: Initial implementation of the micro rate method.
