@@ -1,3 +1,8 @@
+2020-January-19 Struan Robertson
+
+		* FourierGrid1D, gStrucuture.h/.cpp: Initial implementation of reduced mass calculators 
+		for bend and inversion modes.
+
 2020-January-18 Struan Robertson
 
 		* Marquardt.cpp, FittingUtils.h/.cpp: Altered to give better control over Marquardt 
